tests/en/errors/break_outside.salam
// EXPECT: E037
func main: break end
